# gest

./: .clang-format  .gitattributes  .gitignore  .xgignore  CODE_STYLE.md  DESIGN.md  NOTICE.xg  README.md  premake5.lua
.github/workflows/: ci.yml  license.yml
data/: .gitignore
include/gest/: allocator.h  common.h  endian.h  error.h  export.h  gest.h  nanbox.h  sched.h  str.h  token.h  unicode.h  vm.h
include/gest-polyfills/: msvc.h
include/gest-test/: test.h
script/: .pypirc  .xgignore  pyproject.toml  unicode.lua  util.lua  uv-setup.lua  xg.lua  xg.py
script/unicode/: dl.py  gen.py
src/gest/: allocator.c  error.c  gest.c  nanbox.c  str.c  token.c  unicode.c
src/gest-test/: bswap.c  bump_alloc.c  main.c  test.c
src/gestc/: main.c
