# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# SPDX-FileCopyrightText: 2026 Kerem Göksu

[project]
name = "script"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "license-expression>=30.4.4",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
